Added first connection display for SLE, currently inactive

--- a/auris-control-displays/auris-control-displays.cabal
+++ b/auris-control-displays/auris-control-displays.cabal
@@ -66,6 +66,8 @@ library
     GUI.ConnectionTab
     GUI.DataModelTab
     GUI.StatisticsTab
+    GUI.SLEConnections
+    GUI.SLETab
 
   -- Modules included in this library but not exported.
   -- other-modules:
