--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -187,7 +187,9 @@ library
         Build-depends:
             esa-sle
         exposed-modules:
+            Protocol.Internal.SLETypes
             Protocol.Internal.SLE 
+            Protocol.Internal.RAF
     else 
         exposed-modules:
             Protocol.Internal.SLEDummy
