--- a/auris-control-displays/auris-control-displays.cabal
+++ b/auris-control-displays/auris-control-displays.cabal
@@ -59,6 +59,12 @@ flag optimize
       build library with optimization
     default: False 
 
+flag sle 
+    description:
+      build library with SLE support. Requires a valid installation of ESA's C++ SLE API
+    default: False 
+
+
 
 library
   -- Modules exported by the library.
@@ -147,6 +153,10 @@ library
 
   -- Base language which the package is written in.
   default-language:    Haskell2010
+
+  if flag(sle)
+        cpp-options: -DHAS_SLE
+
 
   if flag(llvm)
         ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
