Added handling of FCLTU user service. TC sending not working yet

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
     "SLEsi.C": "cpp",
     "Helpers.H": "cpp",
     "AplServiceInform.C": "cpp",
-    "AplGUID.C": "cpp"
+    "AplGUID.C": "cpp",
+    "SLEcltu.C": "cpp"
   }
 }
