Updates for SLE interface

--- a/DefaultConfig.json
+++ b/DefaultConfig.json
@@ -63,15 +63,27 @@
             "cfgSlePeerID": "AURIS",
             "cfgSleInstances": [
                 {
-                    "tag": "SLEInstRAF",
-                    "contents": {
-                        "cfgSleRafPort": "PORT_TM1",
-                        "cfgSleRafPeerID": "PARAGONTT",
-                        "cfgSleRafBufferSize": 100,
-                        "cfgSleRafLatencyLimit": 1,
-                        "cfgSleRafVersion": "SLEVersion3",
-                        "cfgSleRafDeliveryMode": "SLEOnlineComplete",
-                        "cfgSleRafSII": "sagr=3.spack=facility-PASS1.rsl-fg=1.raf=onlc1"
+                    "cfgSleInstanceNr": 1,
+                    "cfgSleInstanceConfig": {
+                        "tag": "SLEInstRAF",
+                        "contents": {
+                            "cfgSleRafPort": "PORT_TM1",
+                            "cfgSleRafPeerID": "PARAGONTT",
+                            "cfgSleRafVersion": "SLEVersion3",
+                            "cfgSleRafSII": "sagr=3.spack=facility-PASS1.rsl-fg=1.raf=onlc1"
+                        }
+                    }
+                },
+                {
+                    "cfgSleInstanceNr": 1,
+                    "cfgSleInstanceConfig": {
+                        "tag": "SLEInstFCLTU",
+                        "contents": {
+                            "cfgSleCltuVersion": "SLEVersion3",
+                            "cfgSleCltuPort": "PORT_TC1",
+                            "cfgSleCltuPeerID": "PARAGONTT",
+                            "cfgSleCltuSII": "sagr=3.spack=facility-PASS1.rsl-fg=1.cltu=cltu1"
+                        }
                     }
                 }
             ],
