--- a/s2k_config_sle.json
+++ b/s2k_config_sle.json
@@ -64,29 +64,29 @@
             "cfgSlePeerID": "EGSCC",
             "cfgSleInstances": [
                 {
-                    "tag": "SLEInstRAF",
-                    "contents": {
-                        "cfgSleRafPort": "TMPORT",
-                        "cfgSleRafPeerID": "PARAGONTT",
-                        "cfgSleRafBufferSize": 100,
-                        "cfgSleRafLatencyLimit": 1,
-                        "cfgSleRafVersion": "SLEVersion3",
-                        "cfgSleRafDeliveryMode": "SLEOnlineComplete",
-                        "cfgSleRafSII": "sagr=3.spack=facility-PASS1.rsl-fg=1.raf=onlc1"
+                    "cfgSleInstanceNr": 1,
+                    "cfgSleInstanceConfig": {
+                        "tag": "SLEInstRAF",
+                        "contents": {
+                            "cfgSleRafPort": "TMPORT",
+                            "cfgSleRafPeerID": "PARAGONTT",
+                            "cfgSleRafVersion": "SLEVersion3",
+                            "cfgSleRafSII": "sagr=3.spack=facility-PASS1.rsl-fg=1.raf=onlc1"
+                        }
                     }
                 },
                 {
-                    "tag": "SLEInstFCLTU",
-                    "contents": {
-                        "cfgSleCltuPort": "TCPORT",
-                        "cfgSleCltuPeerID": "PARAGONTT",
-                        "cfgSleCltuVersion": "SLEVersion3",
-                        "cfgSleCltuSII": "sagr=3.spack=facility-PASS1.fsl-fg=1.cltu=cltu1",
-                        "cfgSleCltuBufferSize": 100,
-                        "cfgSleCltuPlopInEffect": "SlePLOP2"
+                    "cfgSleInstanceNr": 1,
+                    "cfgSleInstanceConfig": {
+                        "tag": "SLEInstFCLTU",
+                        "contents": {
+                            "cfgSleCltuVersion": "SLEVersion3",
+                            "cfgSleCltuPort": "TCPORT",
+                            "cfgSleCltuPeerID": "PARAGONTT",
+                            "cfgSleCltuSII": "sagr=3.spack=facility-PASS1.fsl-fg=1.cltu=cltu1"
+                        }
                     }
                 }
-
             ]
         },
         "cfgTMFrame": {
