--- a/stack.yaml
+++ b/stack.yaml
@@ -64,7 +64,7 @@ extra-deps:
 - bytestring-to-vector-0.3.0.1
 - hw-prim-bits-0.1.0.4
 - timers-updatable-0.2.0.2
-- Chart-cairo-1.9.3@sha256:f484a7194ca08ed67f02aa626e2f8f4d1a9b50624e0d50e3ced62958f7481cca,925
+#- Chart-cairo-1.9.3@sha256:f484a7194ca08ed67f02aa626e2f8f4d1a9b50624e0d50e3ced62958f7481cca,925
 - refined-0.6.1@sha256:d5d713f0a2ad79d1c049d2d132fd8c2078b883b5ea3db876087eaec102843e57,2748
 - these-skinny-0.7.4@sha256:e29336a1a70a497e09d8266f8438efb30a807bafaa6b00f5a136f7493efb3160,1239
 - gi-gtksource-3.0.24
