Fixed Retrieval for TM Frames

--- a/auris-tm-displays/auris-tm-displays.cabal
+++ b/auris-tm-displays/auris-tm-displays.cabal
@@ -79,7 +79,8 @@ library
     gi-cairo-connector,
     gi-cairo-render,
     gi-gdk,
-    haskell-gi-base
+    haskell-gi-base,
+    text-builder
 
 
   default-extensions:
