--- a/esa-tm-model/esa-tm-model.cabal
+++ b/esa-tm-model/esa-tm-model.cabal
@@ -100,15 +100,15 @@ library
                      -funbox-strict-fields
 
 
-executable FirstTMModelTest
-    main-is: Main.hs
-    default-language: Haskell2010
-    hs-source-dirs: src
-    ghc-options: -Wall -O
-    build-depends:
-        esa-space-protocols -any,
-        esa-base -any,
-        base ==4.*,
-        bytestring >=0.10.8.2 && <0.11,
-        rio,
-        text-short
+-- executable FirstTMModelTest
+--     main-is: Main.hs
+--     default-language: Haskell2010
+--     hs-source-dirs: src
+--     ghc-options: -Wall -O
+--     build-depends:
+--         esa-space-protocols -any,
+--         esa-base -any,
+--         base ==4.*,
+--         bytestring >=0.10.8.2 && <0.11,
+--         rio,
+--         text-short
