--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-18.24
+resolver: lts-18.26
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -71,9 +71,6 @@ extra-deps:
 - gi-cairo-connector-0.1.0@sha256:a79c34c4f22f81a938c5835f623de55fdf1f0f08435897bad68f58e01ffd1464,1213
 - gi-cairo-render-0.1.0@sha256:cb27b31b373c55c5b384a331e439d1ebc2fb3e02c8a58c9bfb83218d5467af2b,3553
 
-ghc-options: 
-  "$targets": -freverse-errors 
-
 # Extra package databases containing global packages
 # extra-package-dbs: []
 
@@ -100,4 +97,4 @@ ghc-options:
 # stack build --profile --ghc-options="-fno-prof-auto"
 apply-ghc-options: everything
 rebuild-ghc-options: true
-ghc-options: -v -optl-v
+ghc-options: -freverse-errors 
