More updates to data model

--- a/auris-control-displays/auris-control-displays.cabal
+++ b/auris-control-displays/auris-control-displays.cabal
@@ -157,7 +157,7 @@ library
 
   if flag(sle)
         cpp-options: -DHAS_SLE
-        build-depends: esa-sle 
+        -- build-depends: esa-sle 
 
 
   if flag(llvm)
