Fixed garbled stack.yaml

--- a/stack.yaml
+++ b/stack.yaml
@@ -97,4 +97,5 @@ extra-deps:
 # stack build --profile --ghc-options="-fno-prof-auto"
 apply-ghc-options: everything
 rebuild-ghc-options: true
-ghc-options: -freverse-errors 
+ghc-options: 
+  "$targets": -freverse-errors -Wunused-packages
