Updated to LTS-19.2, migrated from thyme to time

--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -145,7 +145,6 @@ library
         , lens
         , binary
         , stm-conduit
-        , thyme
         , timers-updatable
         , base64-bytestring-type
         , containers
@@ -160,6 +159,7 @@ library
         , directory
         , timer-wheel
         , word24
+        , time
 
     if flag(sle)
         cpp-options: -DHAS_SLE
