--- a/auris-tm-displays/auris-tm-displays.cabal
+++ b/auris-tm-displays/auris-tm-displays.cabal
@@ -10,7 +10,7 @@ build-type: Simple
 maintainer: michael.oswald@onikudaki.net
 homepage:
 category: UI,Graphics
-cabal-version: >=2.0
+cabal-version: 2.0
 
 
 source-repository head
@@ -47,8 +47,10 @@ library
     GUI.TMParamDetails
     GUI.Chart
     GUI.GraphWidget
+    GUI.ANDWidget
     GUI.ParamDisplay
     GUI.FrameRetrieveDialog
+    GUI.NameStore
 
 
   Hs-Source-Dirs: src/
@@ -79,7 +81,9 @@ library
     gi-cairo-render,
     gi-gdk,
     haskell-gi-base,
-    text-builder
+    text-builder,
+    hashtables-mo,
+    vector
 
 
   default-extensions:
@@ -104,7 +108,6 @@ library
         InstanceSigs
         KindSignatures
         LambdaCase
-        
         MultiParamTypeClasses
         MultiWayIf
         NamedFieldPuns
@@ -121,6 +124,7 @@ library
         TupleSections
         TypeFamilies
         TypeSynonymInstances
+        TypeApplications
         ViewPatterns
         NumericUnderscores
 
