Basic AND functionality working

--- a/auris-tm-displays/auris-tm-displays.cabal
+++ b/auris-tm-displays/auris-tm-displays.cabal
@@ -56,12 +56,9 @@ library
   Hs-Source-Dirs: src/
   Build-Depends:
     base == 4.*,
-    text >= 1.2.2.0,
     rio,
     lens,
-    containers,
     esa-base,
-    esa-space-protocols,
     mcs-interface,
     gui-base,
     text-short,
@@ -69,17 +66,14 @@ library
     Chart-gi-cairo,
     -- Chart-diagrams,
     colour,
-    data-default-class,
     multiset,
     time,
-    pretty-show,
     gi-gtk,
     gi-gtk-hs,
-    gi-gobject,
     gi-cairo,
     gi-cairo-connector,
-    gi-cairo-render,
     gi-gdk,
+    gi-pango,
     haskell-gi-base,
     text-builder,
     hashtables-mo,
