--- a/s2k_config.json
+++ b/s2k_config.json
@@ -7,6 +7,7 @@
         "cfgMongoPort": null
     },
     "aurisPusConfig": {
+        "cfgMission": "MissionDefault",
         "cfgCnC": [
             {
                 "cfgCncHasCRC": false,
