--- a/s2k_config_sle.json
+++ b/s2k_config_sle.json
@@ -7,6 +7,7 @@
     "aurisTheme": "ThemeLight",
     "aurisMission": "DEFAULT",
     "aurisPusConfig": {
+        "cfgMission": "MissionDefault",
         "cfgCnC": [
             {
                 "cfgCncHasCRC": true,
