Added ISL wrapping functionality

--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -122,6 +122,7 @@ library
     Data.PUS.TCCnc
     Data.PUS.Verification
     Data.PUS.Statistics
+    Data.PUS.ISL
     Protocol.ProtocolInterfaces
     Protocol.ProtocolSLE
     Conduit.PayloadParser
