Added instance number to config

--- a/DefaultConfig.json
+++ b/DefaultConfig.json
@@ -3,6 +3,7 @@
         "cfgMongoHost": "localhost",
         "cfgMongoPort": null
     },
+    "aurisInstance": 0,
     "aurisLogLevel": {
         "tag": "LogLevelInfo"
     },
