--- a/EdenRouterCnc1Config.json
+++ b/EdenRouterCnc1Config.json
@@ -1,5 +1,6 @@
 {
     "aurisMIB": null,
+    "aurisInstance": 0,
     "aurisMission": "DEFAULT",
     "aurisDbConfig": null,
     "aurisTheme": "ThemeLight",
