--- a/s2k_config_profile.json
+++ b/s2k_config_profile.json
@@ -1,5 +1,6 @@
 {
     "aurisMIB": null,
+    "aurisInstance": 0,
     "aurisMission": "S2K_TEST",
     "aurisTheme": "ThemeLight",
     "aurisDbConfig": null,
