Fixed some NDIU heartbeat issues

--- a/DefaultConfig.json
+++ b/DefaultConfig.json
@@ -47,6 +47,7 @@
         ],
         "cfgNDIU": [
             {
+                "cfgNdiuDirection": "DirectionOut",
                 "cfgNdiuHeartbeatEnable": true,
                 "cfgNdiuHeartbeatSendTime": 5,
                 "cfgNdiuHeartbeatTimeout": 10,
