--- a/pusc_config_ccs_only.json
+++ b/pusc_config_ccs_only.json
@@ -9,6 +9,7 @@
     },
     "aurisPusConfig": {
         "cfgMission": "MissionPUSC",
+        "cfgNDIU": [],
         "cfgCnC": [
             {
                 "cfgCncHasCRC": true,
