--- a/s2k_config_profile.json
+++ b/s2k_config_profile.json
@@ -6,6 +6,7 @@
     "aurisDbConfig": null,
     "aurisPusConfig": {
         "cfgMission": "MissionDefault",
+        "cfgNDIU": [],
         "cfgCnC": [
             {
                 "cfgCncHasCRC": true,
