--- a/s2k_config_sle.json
+++ b/s2k_config_sle.json
@@ -9,6 +9,7 @@
     "aurisMission": "DEFAULT",
     "aurisPusConfig": {
         "cfgMission": "MissionDefault",
+        "cfgNDIU": [],
         "cfgCnC": [
             {
                 "cfgCncHasCRC": true,
