--- a/EdenRouterCnc1Config.json
+++ b/EdenRouterCnc1Config.json
@@ -5,6 +5,7 @@
     "aurisDbConfig": null,
     "aurisTheme": "ThemeLight",
     "aurisPusConfig": {
+        "cfgNDIU": [],
         "cfgCnC": [
             {
                 "cfgCncHasCRC": true,
