--- a/s2k_config_opt.json
+++ b/s2k_config_opt.json
@@ -9,6 +9,7 @@
     },
     "aurisPusConfig": {
         "cfgMission": "MissionDefault",
+        "cfgNDIU": [],
         "cfgCnC": [
             {
                 "cfgCncHasCRC": false,
