--- a/s2k_gaia_config.json
+++ b/s2k_gaia_config.json
@@ -9,6 +9,7 @@
     },
     "aurisPusConfig": {
         "cfgMission": "MissionDefault",
+        "cfgNDIU": [],
         "cfgCnC": [
             {
                 "cfgCncHasCRC": false,
