Added show instance for NdiuMsg

--- a/pusc_config.json
+++ b/pusc_config.json
@@ -53,7 +53,7 @@
         ],
         "cfgNDIU": [
             {
-                "cfgNdiuHeartbeatEnable": true,
+                "cfgNdiuHeartbeatEnable": false,
                 "cfgNdiuHeartbeatSendTime": 5,
                 "cfgNdiuHeartbeatTimeout": 10,
                 "cfgNdiuDirection": "DirectionOut",
